@@ -419,4 +419,6 @@ public interface ERDesignerBundle {
   String EXPANDALL = "EXPANDALL";
   /** \u0043\u006f\u006c\u006c\u0061\u0070\u0073\u0065\u0020\u0061\u006c\u006c. */
   String COLLAPSEALL = "COLLAPSEALL";
+  /** \u0047\u0072\u0069\u0064\u0020\u0073\u0069\u007a\u0065\u0020\u0061\u0066\u0074\u0065\u0072\u0020\u0072\u0065\u0076\u0065\u0072\u0073\u0065\u0020\u0065\u006e\u0067\u0069\u006e\u0065\u0065\u0072\u0069\u006e\u0067. */
+  String GRIDSIZEAFTERREVERSEENGINEERING = "GRIDSIZEAFTERREVERSEENGINEERING";
 }
